--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+<color name="colorPrimary">#3F51B5</color>
+<color name="colorPrimaryDark">#303F9F</color>
+<color name="colorAccent">#FF4081</color>
+<color name="black">#000</color>
+<color name="white">#fff</color>
+<color name="grey">#636363</color>
+<color name="tiffany_blue">#3ABCA7</color>
+<color name="transparent_black">#80000000</color>
+<color name="transparent_white">#80ffffff</color>
+<color name="default_background">#D0D0D0</color>
 </resources>
